# py-tokenizer

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  PYPI_README.md  README.md  RELEASING.md  pyproject.toml  version.json
.github/workflows/: build_packages.yml  ci.yml  release.yml
benchmarks/: bench_comparison.py
build_tools/: build_linux_packages.py  make_release.py  publish_artifacts.py
src/bindings/: tokenizer.cc
src/iree/tokenizer/: cli.py
tests/: conftest.py  test_batch.py  test_cli.py  test_encode.py  test_load.py  test_tiktoken.py  test_vocab.py
