# Copyright 2026 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.9.0"]
build-backend = "scikit_build_core.build"

[project]
name = "iree-tokenizer"
dynamic = ["version"]
description = "High-performance Python tokenizer backed by IREE"
readme = "PYPI_README.md"
license = "Apache-2.0 WITH LLVM-exception"
requires-python = ">=3.10"
dependencies = ["numpy>=1.26"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
test = ["pytest>=7", "tokenizers", "tiktoken"]
bench = ["tokenizers", "tiktoken", "rich"]

[project.scripts]
iree-tokenizer-python = "iree.tokenizer.cli:main"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["src/iree"]
wheel.py-api = "cp312"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "version.json"
regex = '"package-version":\s*"(?P<value>[^"]+)"'

[tool.scikit-build.cmake.define]
IREE_SOURCE_DIR = {env = "IREE_SOURCE_DIR", default = ""}
IREE_TOKENIZER_NATIVE_ARCH = {env = "IREE_TOKENIZER_NATIVE_ARCH", default = "OFF"}

[tool.pytest.ini_options]
testpaths = ["tests"]
